stage 1 minor improvments

--- a/stage 1.ipynb
+++ b/stage 1.ipynb
@@ -10,13 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[rank: 0] Seed set to 292\n"
+      "[rank: 0] Seed set to 1647\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "292"
+       "1647"
       ]
      },
      "execution_count": 1,
@@ -43,6 +43,8 @@
     "from lightning.pytorch.callbacks.early_stopping import EarlyStopping\n",
     "from lightning.pytorch.tuner import Tuner\n",
     "\n",
+    "from tgb.linkproppred.evaluate import Evaluator\n",
+    "\n",
     "import random\n",
     "L.seed_everything(random.randint(0, 10000))"
    ]
@@ -64,12 +66,14 @@
     }
    ],
    "source": [
-    "dataset = PyGLinkPropPredDataset(name=\"tgbl-wiki\", root=\"datasets\")"
+    "name = 'tgbl-wiki'\n",
+    "dataset = PyGLinkPropPredDataset(name=name, root=\"datasets\")\n",
+    "evaluator = Evaluator(name=name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "304f60e0-a74b-4f83-bdb9-06dabd0b39ed",
    "metadata": {},
    "outputs": [
@@ -77,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109721 23621 47242\n"
+      "110105 23621 23621\n"
      ]
     }
    ],
@@ -103,10 +107,11 @@
     "        x = seq[:-1]\n",
     "        y = seq[1:]\n",
     "        t = torch.stack([torch.zeros_like(ts), ts, ts]).T.flatten()[:-1]\n",
+    "        feat = torch.zeros(x.shape[0], 32)\n",
     "        \n",
-    "        return x, y, t\n",
+    "        return x, feat, t, y\n",
     "\n",
-    "context_window = 512\n",
+    "context_window = 128\n",
     "train_ds = TGSeq(\n",
     "    dataset.src[dataset.train_mask],\n",
     "    dataset.dst[dataset.train_mask],\n",
@@ -124,7 +129,7 @@
     ")\n",
     "\n",
     "test_idx = torch.where(dataset.test_mask)[0]\n",
-    "min_id = val_idx.min()\n",
+    "min_id = test_idx.min()\n",
     "test_ds = TGSeq(\n",
     "    dataset.src[min_id - context_window + 1:],\n",
     "    dataset.dst[min_id - context_window + 1:],\n",
@@ -132,21 +137,9 @@
     "    max_length=context_window\n",
     ")\n",
     "print(len(train_ds), len(val_ds), len(test_ds))\n",
-    "train_loader = DataLoader(train_ds, batch_size=128, num_workers=4, shuffle=True)\n",
-    "val_loader = DataLoader(val_ds, batch_size=128, num_workers=4)\n",
-    "test_loader = DataLoader(test_ds, batch_size=128, num_workers=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "14480e97-9f65-43cd-833a-43b54463134a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# b = next(iter(train_loader))\n",
-    "# x, y, t = b\n",
-    "# x.shape, y.shape, t.shape"
+    "train_loader = DataLoader(train_ds, batch_size=512, num_workers=4)\n",
+    "val_loader = DataLoader(val_ds, batch_size=512, num_workers=4)\n",
+    "test_loader = DataLoader(test_ds, batch_size=512, num_workers=4)"
    ]
   },
   {
@@ -164,11 +157,14 @@
     "\n",
     "model = TGTransformer(\n",
     "    n_vocab=9226+2,\n",
+    "    n_feat=32,\n",
     "    d_hidden=128,\n",
     "    d_mlp=512, \n",
-    "    n_blocks = 8, \n",
+    "    n_blocks = 2, \n",
     "    n_head = 8, \n",
-    "    dropout=0.1\n",
+    "    dropout=0.2,\n",
+    "    neg_sampler=dataset.negative_sampler,\n",
+    "    evaluator=evaluator\n",
     ")"
    ]
   },
@@ -181,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "4477196"
+       "2951756"
       ]
      },
      "execution_count": 6,
@@ -195,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7b8bebaa-3e43-4eec-ad78-d1c8aec48cda",
    "metadata": {},
    "outputs": [
@@ -212,97 +208,30 @@
    ],
    "source": [
     "project = 'tgbl-wiki-tglm'\n",
-    "name = 'test'\n",
+    "name = 'd128-nb2-do0.2'\n",
     "wandb_logger = WandbLogger(\n",
     "    project=project,\n",
     "    name=name,\n",
     "    save_dir='/home/mila/s/soroush.omranpour/scratch/wandb'\n",
     ")\n",
     "trainer = L.Trainer(\n",
-    "    max_epochs=10,\n",
+    "    max_epochs=5,\n",
     "    devices=1,\n",
     "    accelerator=\"gpu\", \n",
     "    logger=wandb_logger,\n",
     "    accumulate_grad_batches=1,\n",
     "    gradient_clip_val=1.,\n",
     "    num_nodes=1\n",
-    ")"
+    ")\n",
+    "dataset.load_val_ns()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "7035bd88-dd41-4da4-bb92-9698bf7516a8",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using a CUDA device ('NVIDIA A100-SXM4-80GB') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msoorism\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.19.10"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/mila/s/soroush.omranpour/scratch/wandb/wandb/run-20250505_204333-ordosylf</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/soorism/tgbl-wiki-tglm/runs/ordosylf' target=\"_blank\">test</a></strong> to <a href='https://wandb.ai/soorism/tgbl-wiki-tglm' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/soorism/tgbl-wiki-tglm' target=\"_blank\">https://wandb.ai/soorism/tgbl-wiki-tglm</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/soorism/tgbl-wiki-tglm/runs/ordosylf' target=\"_blank\">https://wandb.ai/soorism/tgbl-wiki-tglm/runs/ordosylf</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -311,16 +240,19 @@
       "\n",
       "  | Name           | Type             | Params\n",
       "----------------------------------------------------\n",
-      "0 | node_embedding | Embedding        | 1.2 M \n",
-      "1 | time_embedding | TimeEmbedding    | 64    \n",
-      "2 | blocks         | ModuleList       | 2.1 M \n",
-      "3 | head           | Sequential       | 1.2 M \n",
-      "4 | criterion      | CrossEntropyLoss | 0     \n",
+      "0 | feat_embedding | Linear           | 4.2 K \n",
+      "1 | node_embedding | Embedding        | 1.2 M \n",
+      "2 | time_embedding | TimeEmbedding    | 64    \n",
+      "3 | proj           | Linear           | 49.3 K\n",
+      "4 | blocks         | ModuleList       | 526 K \n",
+      "5 | dropout        | Dropout          | 0     \n",
+      "6 | head           | Sequential       | 1.2 M \n",
+      "7 | criterion      | CrossEntropyLoss | 0     \n",
       "----------------------------------------------------\n",
-      "4.5 M     Trainable params\n",
-      "64        Non-trainable params\n",
-      "4.5 M     Total params\n",
-      "17.909    Total estimated model params size (MB)\n",
+      "3.0 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "3.0 M     Total params\n",
+      "11.807    Total estimated model params size (MB)\n",
       "SLURM auto-requeueing enabled. Setting signal handlers.\n"
      ]
     },
@@ -341,12 +273,54 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92231efe077445fca6bc773128c22ed3",
+       "model_id": "749524795e0b44aaad61b315ed9f6188",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Training: |                                                                                                   …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: |                                                                                                 …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: |                                                                                                 …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: |                                                                                                 …"
       ]
      },
      "metadata": {},
@@ -380,7 +354,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "2415f63a-d3dd-4c6c-a16a-554fb58983ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.fit_loop.max_epochs = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "id": "6909b588-1bd8-471e-8bc2-e098fe0c61ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.load_test_ns()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "28dff55f-3b9f-471b-b9bb-7842e850915e",
    "metadata": {},
    "outputs": [
@@ -395,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eaed26eb92a4096828db74d3325cc7c",
+       "model_id": "a73835149d9a4a8692a6eed874207107",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,8 +406,8 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     7.314603328704834     </span>│\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_mrr          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.4213508069515228     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_MRR          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.32283705472946167    </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     5.08382511138916      </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -421,8 +415,8 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    7.314603328704834    \u001b[0m\u001b[35m \u001b[0m│\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        test_mrr         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.4213508069515228    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        test_MRR         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.32283705472946167   \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    5.08382511138916     \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -432,10 +426,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'test_loss': 7.314603328704834, 'test_mrr': 0.4213508069515228}]"
+       "[{'test_loss': 5.08382511138916, 'test_MRR': 0.32283705472946167}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
